<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_movie"
        android:icon="@drawable/ic_ondemand_video_white"
        android:title="@string/movie" />

    <item
        android:id="@+id/action_tvShow"
        android:icon="@drawable/ic_personal_video_white"
        android:title="@string/tvShow" />

    <item
        android:id="@+id/favorite_movie"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/favorite_movie" />

    <item
        android:id="@+id/favorite_tv"
        android:icon="@drawable/ic_favorite_border_black_24dp"
        android:title="@string/favorite_tv_show" />

</menu>
