...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">

    <ImageView
        android:id="@+id/img_bg"
        android:layout_width="0dp"
        android:layout_height="302dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/background_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
...
